--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+:root {
+  --yellow: #ffc107 ;
+  --gray: #1a1a1a ;
+  --white: #ffffff ;
+  --accent:#3f3f3f ;
+  --callTA: #e57373 ;
+}
+
+
 .App {
   text-align: center;
 }
@@ -14,10 +23,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--gray);
   min-height: 100vh;
-  /* display: block; */
-  /* flex-direction: column;
+  /* display: block;
+  flex-direction: column;
   align-items: center;
   justify-content: center; */
   font-size: calc(10px + 2vmin);
@@ -36,3 +45,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* .center{
+  display:block;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+   
+  text-align: center;
+
+} */
